<resources>
    <string name="app_name">Google Chat DMA Bridge</string>
    <string name="intro_header">This is a demonstration of bridging Google Chat to Matrix through a client-side app. Please use a test account to avoid data loss/corruption.</string>
    <string name="intro_instructions" >"To get started, you'll need to authenticate with Google Chat. Click the button below to send the login URL to yourself and open it on a desktop computer. \n\nOnce open, log in normally and wait until you get to a loading screen. Press F12 on that screen to get to developer tools then visit the Application or Storage tab. \n\nExpand \"Cookies\" and select \"https://accounts.google.com\", find the \"oauth_code\" row and double click on the value. \n\nCopy the value here and press \"Continue\". "</string>
    <string name="btn_get_login_url">share login url</string>
    <string name="btn_continue">Continue</string>
    <string name="txt_oauth_code">Cookie value</string>
    <string name="toast_missing_auth_code">Please enter the cookie value</string>
    <string name="toast_invalid_auth_code">That oauth code didn\'t work - try again?</string>
    <string name="homeserver_intro_header">Awesome! Those credentials look good. Now we\'re going to set up your homeserver connection.</string>
    <string name="homeserver_instructions">Currently you need to set up your own homeserver for this demo, however in a proper build this would happen transparently elsewhere.\n\nSome servers, like Synapse, are relatively easy to set up if you haven\'t set one up before. You will need a domain name to use.\n\nOnce your homeserver is running, click the button below to download the appservice registration file, then install it on your homeserver. \n\nThe account it creates is dedicated to this bridge, and will be the same for all the other bridges you set up as part of this demo series.</string>
    <string name="btn_download_appservice_registration">Download Appservice File</string>
    <string name="btn_test_appservice">Test Connection</string>
    <string name="appservice_intro_header">Enter your homeserver URL and test to ensure everything is set up.</string>
    <string name="appservice_instructions">After you\'ve installed the appservice registration file on your homeserver, enter your public homeserver URL (client-server API) and tap \"test connection\".\n\nThis will create a demo user on your homeserver for your rooms to reside. If successful, all of your Google Chat DMs and Spaces will be bridged to that account too.\n\nMatrix rooms created on the account will also be bridged back as Spaces in Google Chat.\n\nNormally, this account registration and picking functionality would happen via some other method. Ideally, other users of this bridging app would be able to find already-bridged chats to join (for example, if your friends were bridged then it\'d be ideal to all be using the same Matrix room).</string>
    <string name="txt_homeserver_url">Homeserver Client-Server API URL</string>
    <string name="toast_missing_homeserver_url">Please enter a homeserver URL</string>
    <string name="toast_invalid_homeserver_url">That URL didn\'t work - please try again</string>
    <string name="initial_sync_intro_header">Looks like everything\'s all set! One moment while the app bridges your accounts…</string>
    <string name="initial_sync_body">This could take a few minutes if you have lots of chats.</string>
    <string name="please_wait">Please Wait</string>
    <string name="sync_from_google">Getting your spaces/DMs from Google Chat</string>
    <string name="bridging_x_chats">Bridging %1$d chats</string>
    <string name="syncing_gchat">Starting up the Google Chat sync loop…</string>
    <string name="syncing_matrix">Starting up the Matrix sync loop…</string>
</resources>